mogonmöte + whitespace temp fix?

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -145,9 +145,9 @@ div.col-md-12 article.panel.panel-primary div.panel-body p, div.col-md-12 sectio
 }
 *{
 	font-family: "Kozuka Gothic Pr6N" !important;
-    white-space: pre-wrap; /* css-3 */
-    white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
-    white-space: -pre-wrap; /* Opera 4-6 */
-    white-space: -o-pre-wrap; /* Opera 7 */
-    word-wrap: break-word; /* Internet Explorer 5.5+ */
+    /*white-space: pre-wrap; /* css-3 */
+    /*white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+    /*white-space: -pre-wrap; /* Opera 4-6 */
+    /*white-space: -o-pre-wrap; /* Opera 7 */
+    /*word-wrap: break-word; /* Internet Explorer 5.5+ */
 }
